Update project dependencies and configurations for compatibility with Java 25 and latest cloud command framework